--- a/static_content/style.css
+++ b/static_content/style.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@700&family=Kanit:ital,wght@1,300&display=swap');
 
 *{
     font-family: 'Gabarito', cursive;
+    font-family: 'Kanit', sans-serif;
 }
 
 .wraper{
